Strip ES date suffix